@@ -40,7 +40,12 @@
     if (sum(tmp <- no.shared(comm))/length(dis) > noshare && noshare > 0) {
         if (trace) 
             cat("Using step-across dissimilarities:\n")
-        dis <- stepacross(dis, trace = trace, ...)
+        rn <- range(dis[tmp])
+        if (rn[2]/rn[1] > 1.01)
+            warning("non-constant distances between points with nothing shared\n",
+                    "  stepacross may be meaningless: consider argument 'noshare=0'")
+        is.na(dis) <- tmp
+        dis <- stepacross(dis, trace = trace, toolong=0, ...)
     }
     if (length(unique(distconnected(tmp, trace = trace > 1))) > 1) 
         warning("Data are disconnected, results may be meaningless")
