@@ -5,6 +5,9 @@ VEGAN STABLE VERSIONS
 
 Version 1.15-2 (opened January 14, 2009)
 
+	* merged r735 & r736: stepacross fixes in metaMDSdist with
+	open-ended dissimilarities (Euclidean, Manhattan etc.).
+
 	* merged r728: oecosimu.Rd example knows "statistic" argument.
 	
 	* merged r683 & r690: anova.cca(..., by = "margin") gained
